# image2json

./: .gitignore  1_20260627_130019.analysis.json  DSC06658.analysis.json  README.md  pyproject.toml
comparisons/dry-008/: 0__MG_0006.json  1_20260627_130019.json  2_DSC05444.json  3_DSC04483.json  4_DSC08334.json  5_DSC00233.json  6_20250516_125456.json  REPORT.md
examples/: README.md
prompts/: vision_analysis.md  vision_analysis_short.md
src/image2json/: __init__.py  __main__.py  analyzer.py  api.py  benchmark.py  cli.py  config.py  inference_schema.py  json_utils.py  models.py  ollama_client.py  warnings.py
tests/: test_analyzer.py  test_api_schema.py  test_cli.py  test_image_resize.py  test_inference_schema.py  test_json_utils.py  test_models.py  test_ollama_client.py  test_ollama_errors.py
