[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "image2json"
version = "0.1.0"
description = "Local-only image-to-JSON vision analysis using a generic schema."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "httpx",
    "pillow",
    "pydantic>=2",
    "python-multipart",
    "pytest",
    "typer",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
image2json = "image2json.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
